--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vue": "^3.2.16"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "@vitejs/plugin-vue": "^1.9.3",
@@ -25,6 +27,7 @@
     "lint-staged": ">=10",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.3.0"
   },
   "lint-staged": {
