--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
