--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "sass": "^1.50.0",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-eslint": "^1.3.0",
