--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "pinia": "^2.0.13",
     "vue": "^3.2.16",
     "vue-router": "4"
